# maplab

./: .clang-format  .gitignore  .gitmodules  .readthedocs.yml  .travis.yml  Build.md  CONTRIBUTORS.md  LICENSE  README.md  dependencies.rosinstall  file1.txt  install.sh
algorithms/ceres-error-terms/: .gitignore  CMakeLists.txt  README.md  package.xml
algorithms/ceres-error-terms/src/: block-pose-prior-error-term-v2.cc  block-pose-prior-error-term.cc  ceres-signal-handler.cc  inertial-error-term-eigen.cc  inertial-error-term.cc  pose-prior-error-term-eigen.cc  pose-prior-error-term.cc  position-error-term.cc  problem-information.cc
algorithms/ceres-error-terms/test/: test_3keyframe_inertial_term_test.cc  test_aid_error_term.cc  test_block_pose_prior_error_term.cc  test_few_points_quaternion_test.cc  test_generic_prior_error_term.cc  test_inertial_term_test.cc  test_inertial_term_test_eigen.cc  test_lidar_term_test.cc  test_mission_baseframe_visual_term_test.cc  test_pose_parameterization_test.cc  test_pose_prior_error_term.cc  test_position_error_term.cc  test_quaternion_eigen_parameterization.cc  test_quaternion_parameterization_test.cc  test_six_dof_block_transformation_error_term.cc  test_six_dof_block_transformation_error_term_with_extrinsics.cc  test_switchable_constraints_block_pose_baseframe_test.cc  test_switchable_constraints_block_pose_test.cc  test_unit3_parameterization.cc  test_visual_term_test.cc
algorithms/feature-tracking/: CMakeLists.txt  package.xml
algorithms/feature-tracking/src/: feature-detection-extraction.cc  feature-track-extractor.cc  feature-tracking-pipeline.cc  feature-tracking-types.cc  vo-feature-tracking-pipeline.cc  vo-outlier-rejection-pipeline.cc
algorithms/feature-tracking/test/: test-feature-track-extractor.cc
algorithms/geometric-vision-algorithms/: .gitignore  CMakeLists.txt  README.md  package.xml
algorithms/geometric-vision-algorithms/src/: five-point-pose-estimator.cc  linear-triangulation.cc  relative-non-central-pnp.cc  rotation-only-detector.cc
algorithms/geometric-vision-algorithms/test/: test_five_point_pose_estimator_test.cc  test_n_view_triangulation.cc  test_pnp_pose_test.cc  test_relative_non_central_pnp.cc  test_rotation_only_detector.cc  test_two_view_triangulation.cc
algorithms/grid-map-amo/: CMakeLists.txt  README.md  package.xml
algorithms/grid-map-amo/src/: amo-combined.cc  elevation-mapping.cc  grid-map-filtering.cc  orthomosaic.cc  temperature-mapping.cc
algorithms/imu-integrator-rk4/: CMakeLists.txt  README.md  package.xml
algorithms/imu-integrator-rk4/src/: imu-integrator-eigen.cc  imu-integrator.cc
algorithms/imu-integrator-rk4/test/: imu_integrator_eigen_test_fixture.cc  imu_integrator_test_fixture.cc  test_imu_integrator_basic_test.cc  test_imu_integrator_cov_phi_test.cc  test_imu_integrator_eigen_basic_test.cc  test_imu_integrator_trajectory_test.cc
algorithms/landmark-triangulation/: CMakeLists.txt  README.md  package.xml
algorithms/landmark-triangulation/src/: landmark-triangulation.cc  pose-interpolator.cc
algorithms/landmark-triangulation/test/: test_landmark_triangulation.cc  test_pose_interpolator_test.cc
algorithms/localization-evaluator/: CMakeLists.txt  package.xml
algorithms/localization-evaluator/src/: localization-evaluator.cc  mission-aligner.cc
algorithms/localization-evaluator/test/: test_localization_evaluator.cc
algorithms/localization-fusion/: CMakeLists.txt  package.xml
algorithms/localization-fusion/src/: filter-base.cc  filter-utilities.cc  localization-filter.cc  ukf.cc
algorithms/localization-fusion/test/: test-ukf-2d-performance.cc  test-ukf-filter.cc
algorithms/map-anchoring/: CMakeLists.txt  package.xml
algorithms/map-anchoring/src/: map-anchoring.cc
algorithms/map-optimization/: CMakeLists.txt  README.md  package.xml
algorithms/map-optimization-legacy/: CMakeLists.txt  README.md  package.xml
algorithms/map-optimization-legacy/src/: ba-optimization-options.cc  double-window.cc  graph-ba-optimizer.cc  landmark-covariance-estimation.cc  landmark-geometry-verification.cc  pose-prior-import.cc
algorithms/map-optimization-legacy/test/: test_4dof_visual_ba_test.cc  test_6dof_ba_test.cc  test_6dof_full_visual_ba_test.cc  test_6dof_trajectory_test.cc  test_basic_viwls_graph_test.cc  test_landmark_association_test.cc  test_landmark_delete_test.cc  test_landmark_geometry_test.cc  test_landmark_merge_test.cc  test_mission_duplicate_test.cc  test_mission_observer_count_test.cc  test_optimizer_copy_test.cc  test_remove_mission_test.cc  test_remove_vertex_edge_test.cc  test_vertex_getter_test.cc  test_visual_ba_test.cc
algorithms/map-optimization/src/: augment-loopclosure.cc  optimization-problem.cc  optimization-state-buffer.cc  optimization-terms-addition.cc  outlier-rejection-solver.cc  solver-options.cc  solver.cc  vi-map-optimizer.cc  vi-map-relaxation.cc  vi-optimization-builder.cc
algorithms/map-sparsification/: CMakeLists.txt  README.md  package.xml
algorithms/online-map-builders/: CMakeLists.txt  package.xml
algorithms/online_map_builders/: CMakeLists.txt  package.xml
algorithms/pointcloud-undistortion/: CMakeLists.txt  package.xml
maplab/: CMakeLists.txt  package.xml
maplab-launch/: CMakeLists.txt  README.md  package.xml
maplab-launch/launch/: davis240c-maplab-node-w-rovioli.launch
maplab-launch/scripts/: play_multibag.sh
visualization/: CMakeLists.txt  README.md  default.rviz  package.xml
visualization/cfg/: lpm-input-filter-for-viz.yaml
visualization/src/: color-palette.cc  common-rviz-visualization.cc  constant-velocity-smoother.cc  debug-visualizer.cc  feature-matches-visualization.cc  landmark-observer-plotter.cc  patch-based-visualization.cc  point-cloud-filter.cc  resource-visualization.cc  rviz-visualization-sink.cc  sequential-plotter.cc  sliding-window-plotter.cc  spatially-distribute-missions.cc  vertex-landmark-visibility-plotter.cc  visualizer.cc  viwls-graph-plotter.cc  viz-data-collector.cc
visualization/test/: test-viz-channels.cc  test-viz-data-collector.cc
(+2321 files in other folders)
