<?xml version="1.0" encoding="UTF-8"?>
<package format="2">
  <name>visualization</name>
  <version>0.0.0</version>
  <description>vi-map visualization for RViz</description>
  <maintainer email="maplab-dev@mavt.ethz.ch">maplab-developers</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin_simple</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>aslam_cv_cameras</depend>
  <depend>aslam_cv_common</depend>
  <depend>aslam_cv_frames</depend>
  <depend>aslam_cv_matcher</depend>
  <depend>eigen_catkin</depend>
  <depend>gflags_catkin</depend>
  <depend>glog_catkin</depend>
  <depend>image_transport</depend>
  <depend>map_manager</depend>
  <depend>map_resources</depend>
  <depend>maplab_common</depend>
  <depend>minkindr</depend>
  <depend>nav_msgs</depend>
  <depend>opencv3_catkin</depend>
  <depend>pcl_ros</depend>
  <depend>posegraph</depend>
  <depend>rosbag</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>vi_map_helpers</depend>
  <depend>vi_map</depend>
  <depend>visualization_msgs</depend>
</package>
