<?xml version="1.0" encoding="UTF-8"?>
<package format="2">
  <name>ceres_error_terms</name>
  <version>0.0.0</version>
  <description>The ceres_error_terms package</description>
  <maintainer email="maplab-dev@mavt.ethz.ch">maplab-developers</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin_simple</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>aslam_cv_cameras</depend>
  <depend>aslam_cv_common</depend>
  <depend>ceres_catkin</depend>
  <depend>eigen_catkin</depend>
  <depend>gflags_catkin</depend>
  <depend>glog_catkin</depend>
  <depend>imu_integrator_rk4</depend>
  <depend>maplab_common</depend>
  <depend>minkindr</depend>
  <depend>posegraph</depend>
  <depend>simulation</depend>
</package>
