<?xml version="1.0" encoding="UTF-8"?>
<package format="2">
  <name>geometric_vision_algorithms</name>
  <version>0.0.0</version>
  <description>geometric_vision_algorithms package</description>
  <maintainer email="maplab-dev@mavt.ethz.ch">maplab-developers</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  
  <depend>aslam_cv_cameras</depend>
  <depend>aslam_cv_common</depend>
  <depend>aslam_cv_frames</depend>
  <depend>aslam_cv_matcher</depend>
  <depend>eigen_catkin</depend>
  <depend>gflags_catkin</depend>
  <depend>glog_catkin</depend>
  <depend>maplab_common</depend>
  <depend>opengv</depend>
  <depend>simulation</depend>
</package>
