<?xml version="1.0" encoding="UTF-8"?>
<package format="2">
  <name>imu_integrator_rk4</name>
  <version>2.2.0</version>
  <description>The imu integrator package</description>
  <maintainer email="maplab-dev@mavt.ethz.ch">maplab-developers</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin_simple</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>eigen_catkin</depend>
  <depend>gflags_catkin</depend>
  <depend>glog_catkin</depend>
  <depend>maplab_common</depend>
  
  <test_depend>simulation</test_depend>
</package>
