<?xml version="1.0" encoding="UTF-8"?>
<package format="2">
  <name>landmark_triangulation</name>
  <version>0.0.0</version>
  <description>Triangulation of landmarks in a VIMap.</description>
  <maintainer email="maplab-dev@mavt.ethz.ch">maplab-developers</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin_simple</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>aslam_cv_triangulation</depend>
  <depend>eigen_catkin</depend>
  <depend>eigen_checks</depend>
  <depend>gflags_catkin</depend>
  <depend>glog_catkin</depend>
  <depend>imu_integrator_rk4</depend>
  <depend>maplab_common</depend>
  <depend>maplab_test_data</depend>
  <depend>map_optimization_legacy</depend>
  <depend>vi_map</depend>
  <depend>vi_mapping_test_app</depend>
</package>
