<?xml version="1.0" encoding="UTF-8"?>
<package format="2">
  <name>localization_evaluator</name>
  <version>0.0.0</version>
  <description>A tool to evaluate localization performance.</description>
  <maintainer email="maplab-dev@mavt.ethz.ch">maplab-developers</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin_simple</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>eigen_catkin</depend>
  <depend>eigen_checks</depend>
  <depend>geometric_vision_algorithms</depend>
  <depend>gflags_catkin</depend>
  <depend>glog_catkin</depend>
  <depend>libnabo</depend>
  <depend>loop_closure_handler</depend>
  <depend>map_anchoring</depend>
  <depend>map_optimization_legacy</depend>
  <depend>maplab_common</depend>
  <depend>posegraph</depend>
  <depend>vi_map</depend>
  <depend>vi_mapping_test_app</depend>
</package>
