<?xml version="1.0" encoding="UTF-8"?>
<package format="2">
  <name>localization_evaluator</name>
  <version>2.2.0</version>
  <description>A tool to evaluate localization performance.</description>
  <maintainer email="maplab-dev@mavt.ethz.ch">maplab-developers</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin_simple</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>eigen_catkin</depend>
  <depend>gflags_catkin</depend>
  <depend>glog_catkin</depend>
  <depend>map_anchoring</depend>
  <depend>map_optimization</depend>
  <depend>maplab_common</depend>
  <depend>vi_map</depend>

  <test_depend>vi_mapping_test_app</test_depend>
</package>
