<?xml version="1.0" encoding="UTF-8"?>
<package format="2">
  <name>map_anchoring</name>
  <version>0.0.0</version>
  <description>A tool to anchor missions.</description>
  <maintainer email="maplab-dev@mavt.ethz.ch">maplab-developers</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin_simple</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>eigen_catkin</depend>
  <depend>gflags_catkin</depend>
  <depend>glog_catkin</depend>
  <depend>loop_closure_handler</depend>
  <depend>maplab_common</depend>
  <depend>vi_map</depend>
</package>
