<?xml version="1.0"?>
<package format="2">
  <name>map_optimization_legacy</name>
  <version>0.0.0</version>
  <description>
    Legacy map optimization algorithms.
    This is a legacy package, prefer map_optimization. 
  </description>
  <maintainer email="maplab-dev@mavt.ethz.ch">maplab-developers</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>aslam_cv_cameras</depend>
  <depend>aslam_cv_common</depend>
  <depend>aslam_cv_frames</depend>
  <depend>aslam_cv_triangulation</depend>
  <depend>ceres_catkin</depend>
  <depend>ceres_error_terms</depend>
  <depend>eigen_catkin</depend>
  <depend>eigen_checks</depend>
  <depend>gflags_catkin</depend>
  <depend>glog_catkin</depend>
  <depend>imu_integrator_rk4</depend>
  <depend>map_resources</depend>
  <depend>maplab_common</depend>
  <depend>minkindr</depend>
  <depend>opencv3_catkin</depend>
  <depend>opengv</depend>
  <depend>posegraph</depend>
  <depend>sensors</depend>
  <depend>simulation</depend>
  <depend>vi_map</depend>
  <depend>vi_map_helpers</depend>
</package>
