<?xml version="1.0"?>
<package format="2">
  <name>map_optimization</name>
  <version>2.2.0</version>
  <description>Visual-inertial optimization and also other sensors.</description>
  <maintainer email="maplab-dev@mavt.ethz.ch">maplab-developers</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>aslam_cv_cameras</depend>
  <depend>aslam_cv_common</depend>
  <depend>ceres_catkin</depend>
  <depend>ceres_error_terms</depend>
  <depend>eigen_catkin</depend>
  <depend>gflags_catkin</depend>
  <depend>glog_catkin</depend>
  <depend>loop_closure_handler</depend>
  <depend>map_manager<depend>
  <depend>maplab_common</depend>
  <depend>vi_map</depend>
  <depend>vi_map_helpers</depend>
  <depend>visualization</depend>
</package>
