<?xml version="1.0"?>
<package format="2">
  <name>online_map_builders</name>
  <version>0.0.0</version>
  <description>Sparse online mapping.</description>
  <maintainer email="maplab-dev@mavt.ethz.ch">maplab-developers</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>cmake_modules</depend>
  <depend>glog_catkin</depend>
  <depend>map_sparsification</depend>
  <depend>sensors</depend>
  <depend>vi_map</depend>
  <depend>vi_map_helpers</depend>
  <depend>vio_common</depend>
</package>
